@@ -59,7 +59,7 @@ Object types that are not listed above (i.e. timeperiods, commands, etc.) do not
 </p>
 
 <p>
-The examples I give below use "standard" matching of object names.  If you wish, you can enable regular expression matching for object names by using the <a href="configmain.html#use_regexp_matching">use_regexp_matching</a> config option.  By default, regular expression matching will only be used in object names that contain the <b>*</b> and <b>?</b> wildcard characters.  If you want regular expression matching to be used on all object names (regardless of whether or not they contain the * and ? wildcard characters), enable the <a href="configmain.html#use_true_regexp_matching">use_true_regexp_matching</a> config option.  Regular expressions can be used in any of the fields used in the examples below (host names, hostgroup names, service names, and servicegroup names).
+The examples I give below use "standard" matching of object names.  If you wish, you can enable regular expression matching for object names by using the <a href="configmain.html#use_regexp_matching">use_regexp_matching</a> config option.  By default, regular expression matching will only be used in object names that contain <b>*</b>, <b>?</b>, <b>+</b>, or <b>\.</b>.  If you want regular expression matching to be used on all object names, enable the <a href="configmain.html#use_true_regexp_matching">use_true_regexp_matching</a> config option.  Regular expressions can be used in any of the fields used in the examples below (host names, hostgroup names, service names, and servicegroup names).
 </p>
 
 <p>
