@@ -155,6 +155,7 @@ The change log for Nagios can be found online at <a href="http://www.nagios.org/
 	<li>Host and service dependencies now support an optional <i>dependency_period</i> directive.  This allows you to limit the times during which dependencies are valid.</li>
 	<li>The <i>parallelize</i> directive in service definitions is now deprecated and no longer used. All service checks are run in parallel in Nagios 3.</li>
 	<li>There are no longer any inherent limitations on the length of host names or service descriptions.</li>
+	<li>Extended regular expressions are now used if you enable the <a href="configmain.html#use_regexp_matching">use_regexp_matching</a> config option.  Regular expression matching is only used in certain object definition directives that contain <b>*</b>, <b>?</b>, <b>+</b>, or <b>\.</b>.</li>
 	</ul>
 </li>
 <br>
